Fix the clipboarfd icon dark mode

--- a/examples/Demo/FluentUI.Explorers/Components/Controls/PreviewCard.razor.css
+++ b/examples/Demo/FluentUI.Explorers/Components/Controls/PreviewCard.razor.css
@@ -4,46 +4,50 @@
   padding: 0px;
 }
 
-  ::deep .card .image {
-    height: 80px;
-    text-align: center;
-    align-content: space-evenly;
-    position: relative;
-  }
+::deep .card .image {
+  height: 80px;
+  text-align: center;
+  align-content: space-evenly;
+  position: relative;
+}
 
-  ::deep .card .image .clipboard-icon {
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    width: 16px;
-    height: 16px;
-    opacity: 0;
-    transition: opacity 0.2s ease-in-out;
-    background-color: var(--colorNeutralBackground1);
-    border-radius: var(--borderRadiusSmall);
-    padding: 2px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.09 2c.2-.58.76-1 1.41-1h3c.65 0 1.2.42 1.41 1h.59c.83 0 1.5.67 1.5 1.5v10c0 .83-.67 1.5-1.5 1.5h-7A1.5 1.5 0 0 1 3 13.5v-10C3 2.67 3.67 2 4.5 2h.59ZM6.5 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3ZM5.09 3H4.5a.5.5 0 0 0-.5.5v10c0 .28.22.5.5.5h7a.5.5 0 0 0 .5-.5v-10a.5.5 0 0 0-.5-.5h-.59c-.2.58-.76 1-1.41 1h-3a1.5 1.5 0 0 1-1.41-1Z' fill='%23FFA500'/%3E%3C/svg%3E");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+::deep .card .image .clipboard-icon {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  width: 16px;
+  height: 16px;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  background-color: var(--colorNeutralBackground1);
+  border-radius: var(--borderRadiusSmall);
+  padding: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.09 2c.2-.58.76-1 1.41-1h3c.65 0 1.2.42 1.41 1h.59c.83 0 1.5.67 1.5 1.5v10c0 .83-.67 1.5-1.5 1.5h-7A1.5 1.5 0 0 1 3 13.5v-10C3 2.67 3.67 2 4.5 2h.59ZM6.5 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3ZM5.09 3H4.5a.5.5 0 0 0-.5.5v10c0 .28.22.5.5.5h7a.5.5 0 0 0 .5-.5v-10a.5.5 0 0 0-.5-.5h-.59c-.2.58-.76 1-1.41 1h-3a1.5 1.5 0 0 1-1.41-1Z' fill='black'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  ::deep .card .image:hover .clipboard-icon {
-    opacity: 1;
-  }
+body[data-theme='dark'] div ::deep .card .image .clipboard-icon {
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.09 2c.2-.58.76-1 1.41-1h3c.65 0 1.2.42 1.41 1h.59c.83 0 1.5.67 1.5 1.5v10c0 .83-.67 1.5-1.5 1.5h-7A1.5 1.5 0 0 1 3 13.5v-10C3 2.67 3.67 2 4.5 2h.59ZM6.5 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3ZM5.09 3H4.5a.5.5 0 0 0-.5.5v10c0 .28.22.5.5.5h7a.5.5 0 0 0 .5-.5v-10a.5.5 0 0 0-.5-.5h-.59c-.2.58-.76 1-1.41 1h-3a1.5 1.5 0 0 1-1.41-1Z' fill='white'/%3E%3C/svg%3E");
+}
 
-  ::deep .card .name {
-    height: 20px;
-    display: block;
-    background-color: var(--colorNeutralBackground4);
-    text-align: center;
-    font-size: var(--fontSizeBase200);
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    border-radius: 0px 0px var(--borderRadiusMedium) var(--borderRadiusMedium);
-  }
+::deep .card .image:hover .clipboard-icon {
+  opacity: 1;
+}
+
+::deep .card .name {
+  height: 20px;
+  display: block;
+  background-color: var(--colorNeutralBackground4);
+  text-align: center;
+  font-size: var(--fontSizeBase200);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border-radius: 0px 0px var(--borderRadiusMedium) var(--borderRadiusMedium);
+}
 
 /* Animation for copy feedback */
 ::deep .card .image.copied {
@@ -55,10 +59,12 @@
     transform: scale(1);
     background-color: transparent;
   }
+
   50% {
     transform: scale(1.1);
     background-color: var(--colorBrandBackground2);
   }
+
   100% {
     transform: scale(1);
     background-color: transparent;
